--- a/default.twig
+++ b/default.twig
@@ -33,14 +33,17 @@
                     <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
                 </a>
             {% endif %}
+
+            <div class="text-left visible-xs-block" style="margin-left: 15px;">
+                <a href="#sidebar" data-toggle="collapse"><i class="fa fa-3x fa-bars" aria-hidden="true"></i></a>
+            </div>
         </header>
 
         <main class="{{ menu ? 'container-fluid' : 'container' }}">
             <div class="row">
 
                 {% if menu is defined %}
-                    <nav id="sidebar" class="col-sm-3 col-lg-2" role="navigation">
-
+                    <nav id="sidebar" class="col-sm-3 col-lg-2 collapse in" role="navigation">
                         {% for section in menu.sections %}
                             <p class="text-muted">
                                 {{ section.name }}
@@ -88,7 +91,30 @@
         <script src="{{ baseUrl }}/js/highlight.pack.js"></script>
 
         <script>
-            hljs.initHighlightingOnLoad();
+            hljs.initHighlighting();
+
+            function checkWidth($highlight) {
+                if ($(window).width() < 768) {
+                    $highlight.addClass('collapse');
+                } else {
+                    $highlight.removeClass('collapse');
+                }
+            }
+
+            $(document).ready(function () {
+                var $highlights = $('.hljs');
+                $highlights.each(function (index) {
+                    var $this = $(this).parent();
+                    var elementId = 'hljs' + index;
+                    $this.attr('id', elementId);
+                    $this.before('<a class="visible-xs-inline visible-sm-inline" href="#' + elementId + '" data-toggle="collapse"><i class="fa fa-expand"></i>&nbsp;Toggle source code ...</a>');
+
+                    checkWidth($this);
+                    $(window).resize(function () {
+                        checkWidth($this);
+                    });
+                });
+            });
         </script>
 
     </body>
