GitHub style highlighting

--- a/default.twig
+++ b/default.twig
@@ -9,7 +9,7 @@
         <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Merriweather:400,900,700,300|Open+Sans:400,800,700|Titillium+Web:600,400' type='text/css'>
         <link rel="stylesheet" href="{{ baseUrl }}/css/bootstrap.min.css">
         <link rel="stylesheet" href="{{ baseUrl }}/css/font-awesome.min.css">
-        <link rel="stylesheet" href="{{ baseUrl }}/css/railscasts.css">
+        <link rel="stylesheet" href="{{ baseUrl }}/css/github.css">
         <link rel="stylesheet" href="{{ baseUrl }}/css/main.css">
     </head>
     <body>
